RESOLVED FIXED79637
Web Inspector: crash in fake workers
https://bugs.webkit.org/show_bug.cgi?id=79637
Summary Web Inspector: crash in fake workers
Yury Semikhatsky
Reported 2012-02-26 23:48:10 PST
Original Chromium report: crbug.com/115694 0x7f919f1f3bcd [chrome - third_party/WebKit/Source/WebCore/inspector/InspectorAgent.cpp:179] WebCore::PostWorkerNotificationToFrontendTask::performTask 0x7f919ec5855e [chrome - third_party/WebKit/Source/WebCore/dom/Document.cpp:4891] WebCore::Document::didReceiveTask 0x7f919e32e80b [chrome - ./base/callback.h:272] MessageLoop::RunTask 0x7f919e32efa7 [chrome - base/message_loop.cc:470] MessageLoop::DeferOrRunPendingTask 0x7f919e32f5a7 [chrome - base/message_loop.cc:660] MessageLoop::DoWork 0x7f919e333438 [chrome - base/message_pump_default.cc:28] base::MessagePumpDefault::Run 0x7f919e32c3bb [chrome - base/message_loop.cc:390] MessageLoop::Run 0x7f919fb9c371 [chrome - content/renderer/renderer_main.cc:241] RendererMain 0x7f919e2f8148 [chrome - content/app/content_main.cc:233] content::ContentMain 0x7f919dab0abc [chrome - chrome/app/chrome_main.cc:32] ChromeMain 0x7f919dab0a75 [chrome - chrome/app/chrome_exe_main_gtk.cc:18] main 0x7f9197661c4c [libc-2.11.1.so - libc-start.c:226] __libc_start_main
Attachments
Patch (4.92 KB, patch)
2012-02-26 23:56 PST, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2012-02-26 23:56:19 PST
Andrey Kosyakov
Comment 2 2012-02-27 00:11:37 PST
LGTM
Yury Semikhatsky
Comment 3 2012-02-27 00:42:54 PST
Note You need to log in before you can comment on or make changes to this bug.