Web Inspector: crash in fake workers https://bugs.webkit.org/show_bug.cgi?id=79637

Notify front-end about worker creation/destruction synchronously instead of
posting a task.

Reviewed by Pavel Feldman.

* inspector/InspectorAgent.cpp:
(WebCore):
(WebCore::InspectorAgent::didCreateWorker):
(WebCore::InspectorAgent::didDestroyWorker):
* inspector/InspectorAgent.h:
(InspectorAgent):

Canonical link: https://commits.webkit.org/96735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108965 268f45cc-cd09-0410-ab3c-d52691b4dbfc